--- a/src/popup.css
+++ b/src/popup.css
@@ -6,10 +6,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-ul {
-  list-style: none;
-}
 /* normalize css ends here */
 
 html {
@@ -18,65 +14,29 @@ html {
   color: #222;
 }
 
+body {
+  width: 350px;
+  height: 300px;
+}
+
 .app {
   height: 100%;
-  text-align: left;
-  padding: 20px;
-}
-
-.app-heading {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.tabs-list {
-  margin: 15px -8px;
-}
-
-.tab-container {
   display: flex;
   align-items: center;
-  padding: 8px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.tab-container:hover {
-  background-color: #fafafa;
-}
-
-.tab-image {
-  width: 20px;
-  height: 20px;
-  margin-right: 8px;
-  flex-shrink: 0;
-}
-
-.tab-image-placeholder {
-  font-size: 22px;
-  color: #555;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
-}
-
-.tab-title {
-  font-size: 14px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px;
 }
 
 .title {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 10px;
-  text-align: center;
 }
 
 .subtitle {
   font-size: 12px;
-  text-align: center;
 }
 
 code {
@@ -85,6 +45,43 @@ code {
   background-color: rgba(254, 237, 185, 0.3);
   padding: 2px 4px;
   border-radius: 2px;
+}
+
+.counter-label {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+.counter {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.button-container {
+  margin-top: 15px;
+}
+
+.button {
+  border: 0;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-right: 4px;
+  margin-left: 4px;
+  background-color: bisque;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  text-decoration: none;
+  transition: transform 0.2s ease;
+  user-select: none;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  transform: scale(1.1);
 }
 
 .divider {
